--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-color-palette",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -28,6 +29,7 @@
     "eslint-plugin-react": "^7.37.4",
     "lodash-es": "^4.17.21",
     "prettier": "^3.5.3",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
     "vite": "^6.2.0"
   }
