--- a/src/design/components/button/buttonConfig.json
+++ b/src/design/components/button/buttonConfig.json
@@ -10,9 +10,9 @@
       "label": "Shape",
       "component": "RadioButton",
       "data": [
-        { "value": "", "label": "Square" },
-        { "value": "round", "label": "Round" },
-        { "value": "circle", "label": "Circle" }
+        { "value": "rounded-none", "label": "Square" },
+        { "value": "rounded", "label": "Round" },
+        { "value": "rounded-full", "label": "Circle" }
       ]
     }
   ]
